5.2: X/YY/2018
	* CORE: Added BaseSchemaUtil to print out the schema statements necessary to create a table.
	* CORE: Significant refactoring to make FieldType and TableInfo not depend on Dao or ConnectionSource.
	* CORE: Fixed problem with null field assignment causing a NPE in the resulting message.  Thanks to hrach.
	* CORE: Fixed possible problems with the transaction level thread-local not being handled right.
	* CORE: Added support for @DatabaseField(readOnly) boolean for returning non-column fields.

5.1: 2/19/2018
	* CORE: Added @DatabaseField(fullColumnDefinition) for fully describing a column as opposed to columnDefinition.
	* CORE: Added synchronized keyword to BaseDaoImpl.createOrUpdate() and createIfNotExists().
	* CORE: Added integer date support.  Thanks to noordawod.
	* CORE: Added support for CloseableIterator.moveAbsolute(...).  Thanks to renaudcerrato.
	* CORE: Fixed but with get table name not using TableInfo.  Thanks to 0xabadea.
	* CORE: Fixed handling of field capitalization which was screwing up Turkish fields.  Thanks to folkyatina.
	* CORE: Fixed handling of joined queries with orders and group by's.  Thanks much to p91paul.
	* CORE: Fixed bad bug with committing of inner transactions inappropriately.  Thanks much to maroux.
	* CORE: Normalized all of the up/down case usage to the DatabaseType so it can be overridden.
	* JDBC: Fixed problem with UUID native type not using the correct persister.  Thanks to Bo98.
	* ANDROID: Added field sorting for more deterministic config file output.  Thanks to jibidus.

5.0: 6/27/2016
	* ALL: ORMLite has dropped support for Java 5.  Java 6 is now required.
	* ALL: Added boolean argument to DatabaseConnection.compileStatement(...) to fix a cache bug.
	* ALL: Changed DatabaseResults.getObjectCache() to be getObjectCacheForRetrieve() and getObjectCacheForStore().
	* CORE: Added JOIN-ing between tables _without_ a foreign-object relationship.
	* CORE: Added TimeStampStringType to support Android timestamps.