@@ -2,11 +2,12 @@
 	* CORE: Added BaseSchemaUtil to print out the schema statements necessary to create a table.
 	* CORE: Significant refactoring to make FieldType and TableInfo not depend on Dao or ConnectionSource.
 	* CORE: Fixed problem with null field assignment causing a NPE in the resulting message.  Thanks to hrach.
-	* CORE: Fixed possible problems with the transaction level thread-local not being handled right.
+	* CORE: Fixed problems with the transaction level thread-local not being handled right.  Thanks to Bo98.
+	* CORE: Fixed @DatabaseField(fullColumnDefinition) which was completely broken.  Thanks to ethanmdavidson.
 	* CORE: Added support for @DatabaseField(readOnly) boolean for returning non-column fields.
+	* CORE: Added @DatabaseField(fullColumnDefinition) for fully describing a column as opposed to columnDefinition.
 
 5.1: 2/19/2018
-	* CORE: Added @DatabaseField(fullColumnDefinition) for fully describing a column as opposed to columnDefinition.
 	* CORE: Added synchronized keyword to BaseDaoImpl.createOrUpdate() and createIfNotExists().
 	* CORE: Added integer date support.  Thanks to noordawod.
 	* CORE: Added support for CloseableIterator.moveAbsolute(...).  Thanks to renaudcerrato.
